--- a/user-accounts/public/index.html
+++ b/user-accounts/public/index.html
@@ -7,6 +7,9 @@
 <a href="/login">Multi-page App Login</a><br />
 <a href="/single.html">Single-page App Login</a><br />
 
+<br />
+<a href="/auth/twitter">Twitter Login</a><br />
+
 </body>
 </html>
 
