--- a/user-accounts/public/index.html
+++ b/user-accounts/public/index.html
@@ -9,6 +9,42 @@
 
 <br />
 <a href="/auth/twitter">Twitter Login</a><br />
+<a href="/auth/facebook">Facebook Login</a><br />
+
+<br />
+
+<div id="content_register" class="content">
+
+<h1>Register</h1>
+<form id="login" action="/auth/register" method="post">
+
+<p>
+<label for="name">Name:</label><br />
+<input id="name" name="name" />
+</p>
+
+<p>
+<label for="email">Email:</label><br />
+<input id="email" name="email" />
+</p>
+
+<p>
+<label for="password">Password:</label><br />
+<input type="password" id="password" name="password" />
+</p>
+
+<p>
+<label for="repeat">Repeat Password:</label><br />
+<input type="password" id="repeat" name="repeat" />
+</p>
+
+<p>
+<input type="submit">
+</p>
+</form>
+
+</div>
+
 
 </body>
 </html>
