quick, api plugin

--- a/plugin-web/public/index.html
+++ b/plugin-web/public/index.html
@@ -6,7 +6,9 @@
 
 <h1>Seneca Web Plugin Example</h1>
 
-<a href="/page/mypage.html">My Plugin Page</a>
+<a href="/page/mypage.html">My plugin page</a><br />
+<a href="/quick">Quick request</a><br />
+<a href="/api/foo">API call</a>
 
 </body>
 </html>
