--- a/plugin-web/public/index.html
+++ b/plugin-web/public/index.html
@@ -8,7 +8,7 @@
 
 <a href="/page/mypage.html">My plugin page</a><br />
 <a href="/quick">Quick request</a><br />
-<a href="/api/foo">API call</a>
+<a href="/api/foo">API call</a><br />
 
 </body>
 </html>
