micro-services mostly working

--- a/micro-services/public/index.html
+++ b/micro-services/public/index.html
@@ -10,6 +10,10 @@
 <p>Micro-Services</p>
 
 
+<h1>Hi There!</h1>
+<h2>Have an <span id="offer"></span>!</h2>
+
+
 <div id="content_login" class="content">
 
 <h1>Login</h1>
@@ -26,7 +30,7 @@
 </p>
 
 <p>
-<input type="submit">
+<input type="submit" value="login">
 </p>
 </form>
 
@@ -38,8 +42,8 @@
 
 <h1>Account</h1>
 
-Username: <span id="user_name"></span><br />
-Email: <span id="user_email"></span><br />
+Username: <span id="user_nick"></span><br />
+Name: <span id="user_name"></span><br />
 
 <button id="logout">logout</button>
 
