changes to support new seneca-auth implementation

--- a/user-accounts/public/index.html
+++ b/user-accounts/public/index.html
@@ -4,8 +4,10 @@
 </head>
 <body>
 
-<a href="/login">Multi-page App Login</a><br />
-<a href="/single.html">Single-page App Login</a><br />
+<a href="/login">Multi-page App Login</a> (make sure that redirect.always is true - to automatically redirect to desired page)
+<br />
+<a href="/single.html">Single-page App Login</a> (make sure that redirect.always is false - no redirect is required)
+<br />
 
 <br />
 <a href="/auth/twitter">Twitter Login</a><br />
