removed twitter login

--- a/user-accounts/public/index.html
+++ b/user-accounts/public/index.html
@@ -10,7 +10,7 @@
 <br />
 
 <br />
-<a href="/auth/twitter">Twitter Login</a><br />
+<!--<a href="/auth/twitter">Twitter Login</a><br />-->
 <a href="/auth/facebook">Facebook Login</a><br />
 
 <br />
