--- a/micro-services/public/index.html
+++ b/micro-services/public/index.html
@@ -1,55 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="jquery-2.1.1.min.js"></script>
-<script src="index.js"></script>
+  <script src="jquery-2.1.1.min.js"></script>
+  <script src="index.js"></script>
 </head>
-<body>
-
-
-<p>Micro-Services</p>
-
-
-<h1>Hi There!</h1>
-<h2>Have an <span id="offer"></span>!</h2>
-
-
-<div id="content_login" class="content">
-
-<h1>Login</h1>
-<form id="login" action="/auth/login" method="post">
-
-<p>
-<label for="username">Username:</label><br />
-<input id="username" name="username" />
-</p>
-
-<p>
-<label for="username">Password:</label><br />
-<input type="password" id="password" name="password" />
-</p>
-
-<p>
-<input type="submit" value="login">
-</p>
-</form>
-
-</div>
-
-
-<div id="content_account" class="content" style="display:none">
-
-
-<h1>Account</h1>
-
-Username: <span id="user_nick"></span><br />
-Name: <span id="user_name"></span><br />
-
-<button id="logout">logout</button>
-
-</div>
-
-
-
+<body>  
+  <p>Micro-Services</p>
+  <h1>Hi There!</h1>
+  <h2>Have an <span id="offer"></span>!</h2>
+  <div id="content_login" class="content">  
+    <h1>Login</h1>
+    <form id="login" action="/auth/login" method="post">  
+      <p>
+        <label for="username">Username:</label><br />
+        <input id="username" name="username" />
+      </p>  
+      <p>
+        <label for="username">Password:</label><br />
+        <input type="password" id="password" name="password" />
+      </p>  
+      <p>
+        <input type="submit" value="login">
+      </p>
+    </form>  
+  </div>
+  <div id="content_account" class="content" style="display:none">  
+    <h1>Account</h1>
+    Username: <span id="user_nick"></span><br />
+    Name: <span id="user_username"></span><br />  
+    <button id="logout">logout</button>  
+  </div>
 </body>
 </html>
